{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 277,
  "lineage": "63c3f76b-179c-a362-c203-196d370dc8ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "go-simple-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e601abe3e1a910f",
            "arn": "arn:aws:ec2:eu-central-1:679755225703:instance/i-0426f09f1d8147f38",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0426f09f1d8147f38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035caf34ae98d8d9a",
            "private_dns": "ip-10-0-1-228.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "public_ip": "52.57.73.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0264a5c6442ba0ade",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05911108cdb754b2a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f854773dc6e85894"
            ]
          },
          "dependencies": [
            "aws_key_pair.go-simple-api-deployer",
            "aws_security_group.go-simple-api-security-group",
            "aws_subnet.go-simple-public-subnet1",
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "go-simple-api-igt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:internet-gateway/igw-0666ec6ed1d899a57",
            "id": "igw-0666ec6ed1d899a57",
            "owner_id": "679755225703",
            "tags": {
              "Name": "go-internet-gateway"
            },
            "tags_all": {
              "Name": "go-internet-gateway"
            },
            "vpc_id": "vpc-0d32a4a8dde1e3928"
          },
          "dependencies": [
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "go-simple-public-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:network-acl/acl-0f13f7e42cb2c906f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0f13f7e42cb2c906f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "owner_id": "679755225703",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0d32a4a8dde1e3928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0bab5cb3cde3504e3",
            "network_acl_id": "acl-0f13f7e42cb2c906f",
            "subnet_id": "subnet-05911108cdb754b2a"
          },
          "dependencies": [
            "aws_network_acl.go-simple-public-network-acl",
            "aws_subnet.go-simple-public-subnet1",
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "go-simple-api-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0666ec6ed1d899a57",
            "id": "r-rtb-0344fec34bdebae171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0344fec34bdebae17",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.go-simple-api-igt",
            "aws_route_table.go-simple-public-route-table",
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "go-simple-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:route-table/rtb-0098221c5ebbe39e1",
            "id": "rtb-0098221c5ebbe39e1",
            "owner_id": "679755225703",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "go-api-private-route-table"
            },
            "tags_all": {
              "Name": "go-api-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d32a4a8dde1e3928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "go-simple-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:route-table/rtb-0344fec34bdebae17",
            "id": "rtb-0344fec34bdebae17",
            "owner_id": "679755225703",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "go-api-public-route-table"
            },
            "tags_all": {
              "Name": "go-api-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d32a4a8dde1e3928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "go-simple-api-private-route-table-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0279d801601084033",
            "route_table_id": "rtb-0098221c5ebbe39e1",
            "subnet_id": "subnet-08841727c85055199"
          },
          "dependencies": [
            "aws_route_table.go-simple-private-route-table",
            "aws_subnet.go-simple-private-subnet1",
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "go-simple-api-public-route-table-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0442d286112901e64",
            "route_table_id": "rtb-0344fec34bdebae17",
            "subnet_id": "subnet-05911108cdb754b2a"
          },
          "dependencies": [
            "aws_route_table.go-simple-public-route-table",
            "aws_subnet.go-simple-public-subnet1",
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "go-simple-api-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:security-group/sg-0f854773dc6e85894",
            "description": "allow inbound and outbound for web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f854773dc6e85894",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "go-web-access",
            "name_prefix": "",
            "owner_id": "679755225703",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d32a4a8dde1e3928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "go-simple-private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:subnet/subnet-08841727c85055199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08841727c85055199",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679755225703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "go-api-subnet-private-1"
            },
            "tags_all": {
              "Name": "go-api-subnet-private-1"
            },
            "vpc_id": "vpc-0d32a4a8dde1e3928"
          },
          "dependencies": [
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "go-simple-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:subnet/subnet-05911108cdb754b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05911108cdb754b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679755225703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "go-api-subnet-public-1"
            },
            "tags_all": {
              "Name": "go-api-subnet-public-1"
            },
            "vpc_id": "vpc-0d32a4a8dde1e3928"
          },
          "dependencies": [
            "aws_vpc.go-simple-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "go-simple-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:679755225703:vpc/vpc-0d32a4a8dde1e3928",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f814a28cfac3f5c",
            "default_route_table_id": "rtb-0ae6a61169681adce",
            "default_security_group_id": "sg-0de7a35cd35d2137a",
            "dhcp_options_id": "dopt-005c73ba63e287615",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d32a4a8dde1e3928",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae6a61169681adce",
            "owner_id": "679755225703",
            "tags": {
              "Name": "go-api-vpc"
            },
            "tags_all": {
              "Name": "go-api-vpc"
            }
          }
        }
      ]
    }
  ]
}